content/docs/v0.0.1/README.md
---
title: Welcome | Kubeform
description: Welcome to Kubeform
menu:
  docs_v0.0.1:
    identifier: readme
    name: Readme
    parent: welcome
    weight: -1
menu_name: docs_v0.0.1
section_menu_id: welcome
url: /docs/v0.0.1/welcome/
aliases:
- /docs/v0.0.1/
- /docs/v0.0.1/README/
info:
  version: v0.0.1
---

# Kubeform

Kubeform by AppsCode is a Kubernetes operator for [terrafrom](https://terraform.io). If you need to create a cloud infrastructure from kubernetes to use it with any kubernetes workloads or CRD you might want to create it from kubernetes. Kubeform allows you to create cloud infrastructure from kubernetes. You can just write a CRD for a cloud infrastructure, apply it and Kubeform will create it!

From here you can learn all about Kubeform's architecture and how to deploy and use Kubeform.

- [Concepts](/docs/v0.0.1/concepts/). Concepts explain some significant aspect of Kubeform. This is where you can learn about what Kubeform does and how it does it.

- [Setup](/docs/v0.0.1/setup/). Setup contains instructions for installing
  the Kubeform in various cloud providers.

- [Guides](/docs/v0.0.1/guides). Guides show you how to perform tasks with Kubeform.

- [Reference](/docs/v0.0.1/reference/). Detailed exhaustive lists of
command-line options, configuration options, API definitions, and procedures.

We're always looking for help improving our documentation, so please don't hesitate to [file an issue](https://github.com/kubeform/project/issues/new) if you see some problem. Or better yet, submit your own [contributions](/docs/v0.0.1/CONTRIBUTING) to help
make our docs better.
